compiler-core/src/type_/snapshots/gleam_core__type___tests__pipe_with_annonymous_unannotated_functions_wrong_arity1.snap
---
source: compiler-core/src/type_/tests.rs
assertion_line: 2332
expression: "\npub fn main() {\n  let a = 1\n     |> fn (x) { #(x, x + 1) }\n     |> fn (x, y) { x.0 }\n     |> fn (x) { x }\n}\n"
---
error: Incorrect arity
  ┌─ /src/one/two.gleam:5:9
  │
5 │      |> fn (x, y) { x.0 }
  │         ^^^^^^^^^^^^^^^^^ Expected 2 arguments, got 1


error: Type mismatch
  ┌─ /src/one/two.gleam:5:21
  │
5 │      |> fn (x, y) { x.0 }
  │                     ^ What type is this?

To index into a tuple we need to know it size, but we don't know anything
about this type yet. Please add some type annotations so we can continue.
